[gd_scene load_steps=4 format=2]

[ext_resource path="res://PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://art/beams.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.36038
height = 38.4347

[node name="PlayerBullet" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 1.5708
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 130, 308, 63, 98 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Visibility" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="area_entered" from="." to="." method="_on_PlayerBullet_area_entered"]

[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]

[connection signal="screen_exited" from="Visibility" to="." method="_on_Visibility_screen_exited"]


